--- a/other/Servicios.html
+++ b/other/Servicios.html
@@ -58,7 +58,7 @@
           </div>
           <div class="column">
             <div class="content">
-            <img src="" alt="" style="width:100%">
+            <img src="../media/Konnus.png" alt="" style="width:100%">
               <h3>My Work</h3>
               <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
             </div>
