--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
                     <div class="overlay-content">
                       <a href="./index.html">Acerca de</a>
                       <a href="./other/Servicios.html">Servicios</a>
-                      <a href="#">Clientes</a>
-                      <a href="#">Contacto</a>
+                      <a href="./other/Contacto.html">Contacto</a>
                     </div>
                   </div>
                   <span style="font-size:30px;cursor:pointer;color:white;margin-left: 20px;" onclick="openNav()">&#9776; </span>
@@ -74,7 +73,14 @@
 
 
 
-    <div id="footer">footer</div>
+    <div id="footer"><li class="redes">
+      <a  href=""><img src="./media/iconos/facebook.png" alt="" srcset=""></a>
+      <a  href=""><img src="./media/iconos/instagram.png" alt="" srcset=""></a>
+      <a  href=""><img src="./media/iconos/linkedin.png" alt="" srcset=""></a>
+      <a  href=""><img src="./media/iconos/snapchat.png" alt="" srcset=""></a>
+      <a  href=""><img src="./media/iconos/twitter.png" alt="" srcset=""></a>
+      <a  href=""><img src="./media/iconos/whatsapp.png" alt="" srcset=""></a>
+    </li></div>
     <script src="./js/main.js"></script>
 </body>
 </html>
