--- a/other/Servicios.html
+++ b/other/Servicios.html
@@ -17,8 +17,7 @@
                         <div class="overlay-content">
                           <a href="../index.html">Acerca de</a>
                           <a href="./Servicios.html">Servicios</a>
-                          <a href="#">Clientes</a>
-                          <a href="#">Contacto</a>
+                          <a href="./Contacto.html">Contacto</a>
                         </div>
                       </div>
                       <span style="font-size:30px;cursor:pointer;color:white;" onclick="openNav()">&#9776; </span>
@@ -76,7 +75,14 @@
         <!--Portafolio Termina aqui -->
         </div>
 
-        <div id="footer" > footer</div>
+        <div id="footer"><li class="redes">
+            <a  href=""><img src="../media/iconos/facebook.png" alt="" srcset=""></a>
+            <a  href=""><img src="../media/iconos/instagram.png" alt="" srcset=""></a>
+            <a  href=""><img src="../media/iconos/linkedin.png" alt="" srcset=""></a>
+            <a  href=""><img src="../media/iconos/snapchat.png" alt="" srcset=""></a>
+            <a  href=""><img src="../media/iconos/twitter.png" alt="" srcset=""></a>
+            <a  href=""><img src="../media/iconos/whatsapp.png" alt="" srcset=""></a>
+          </li></div>
 <script src="../js/main.js"></script>
 </body>
 </html>
