--- a/other/Servicios.html
+++ b/other/Servicios.html
@@ -76,12 +76,12 @@
         </div>
 
         <div id="footer"><li class="redes">
-            <a  href=""><img src="../media/iconos/facebook.png" alt="" srcset=""></a>
-            <a  href=""><img src="../media/iconos/instagram.png" alt="" srcset=""></a>
-            <a  href=""><img src="../media/iconos/linkedin.png" alt="" srcset=""></a>
-            <a  href=""><img src="../media/iconos/snapchat.png" alt="" srcset=""></a>
-            <a  href=""><img src="../media/iconos/twitter.png" alt="" srcset=""></a>
-            <a  href=""><img src="../media/iconos/whatsapp.png" alt="" srcset=""></a>
+            <a  href="https://www.facebook.com/Rivas.CesarGuzman"><img src="../media/iconos/facebook.png" alt="" srcset=""></a>
+            <a  href="https://www.instagram.com/francrivas/"><img src="../media/iconos/instagram.png" alt="" srcset=""></a>
+            <a  href="https://www.linkedin.com/in/francriv/"><img src="../media/iconos/linkedin.png" alt="" srcset=""></a>
+            <a  href="../media/iconos/snapcode.png" download="Snapcode.png"><img src="../media/iconos/snapchat.png" alt="snapchat"></a>
+            <a  href="https://twitter.com/FrancRivas"><img src="../media/iconos/twitter.png" alt="" srcset=""></a>
+            
           </li></div>
 <script src="../js/main.js"></script>
 </body>
