--- a/other/Servicios.html
+++ b/other/Servicios.html
@@ -36,29 +36,29 @@
         <div class="row">
           <div class="column">
             <div class="content">
-              <img src="../media/konnus1.png" alt="Pizza" style="width:100%">
-              <h3>Konnu´s Pizza </h3>
+              <img src="../media/paginas.jpg" alt="page Web" style="width:100%">
+              <h3>Creacion de paginas Web </h3>
               <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
             </div>
           </div>
           <div class="column">
             <div class="content">
-            <img src="../media/Carnitas.png" alt="Carnitas" style="width:100%">
-              <h3>Carnitas Pepe Fantasma</h3>
+            <img src="../media/apps.jpg" alt="Carnitas" style="width:100%">
+              <h3>Desarrollo de Apps</h3>
               <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
             </div>
           </div>
           <div class="column">
             <div class="content">
-            <img src="../media/Slider-css.png" alt="Slider" style="width:100%">
-              <h3>Slider css</h3>
+            <img src="../media/soporte.jpg" alt="Soporte" style="width:100%">
+              <h3>Soporte Tecnico</h3>
               <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
             </div>
           </div>
           <div class="column">
             <div class="content">
-            <img src="../media/Konnus2.png" alt="otra" style="width:100%">
-              <h3>My Work</h3>
+            <img src="../media/diseño.png" alt="otra" style="width:100%">
+              <h3>Diseño Creativo</h3>
               <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
             </div>
           </div>
