--- a/other/Servicios.html
+++ b/other/Servicios.html
@@ -30,7 +30,7 @@
         <hr>
         
         <h2>PORTFOLIO</h2>
-        <p>Aqui puedes encontrar algo de lo poco que he hecho y/o he coloborado.</p>
+        <p>Aqui puedes encontrar algo de lo poco que puedo hacer.</p>
         
         <!-- Portfolio aqui -->
         <div class="row">
