--- a/other/Servicios.html
+++ b/other/Servicios.html
@@ -81,6 +81,7 @@
             <a  href="https://www.linkedin.com/in/francriv/"><img src="../media/iconos/linkedin.png" alt="" srcset=""></a>
             <a  href="../media/iconos/snapcode.png" download="Snapcode.png"><img src="../media/iconos/snapchat.png" alt="snapchat"></a>
             <a  href="https://twitter.com/FrancRivas"><img src="../media/iconos/twitter.png" alt="" srcset=""></a>
+            <a  href="https://github.com/Francriv"><img src="../media/iconos/github-sign.png" alt="" srcset=""></a>
             
           </li></div>
 <script src="../js/main.js"></script>
