--- a/other/Servicios.html
+++ b/other/Servicios.html
@@ -36,21 +36,21 @@
         <div class="row">
           <div class="column">
             <div class="content">
-              <img src="../media/paginas.jpg" alt="page Web" style="width:100%">
+              <img src="../media/paginas.png" alt="page Web" style="width:100%">
               <h3>Creacion de paginas Web </h3>
               <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
             </div>
           </div>
           <div class="column">
             <div class="content">
-            <img src="../media/apps.jpg" alt="Carnitas" style="width:100%">
+            <img src="../media/apps.png" alt="Carnitas" style="width:100%">
               <h3>Desarrollo de Apps</h3>
               <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
             </div>
           </div>
           <div class="column">
             <div class="content">
-            <img src="../media/soporte.jpg" alt="Soporte" style="width:100%">
+            <img src="../media/soporte.png" alt="Soporte" style="width:100%">
               <h3>Soporte Tecnico</h3>
               <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
             </div>
