--- a/other/Contacto.html
+++ b/other/Contacto.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/Contacto.css">
     <link rel="stylesheet" href="../css/main.css">   
-    <title>Document</title>
+    <title>Contacto</title>
 </head>
 <body>
 <div id="header" > 
