--- a/other/Servicios.html
+++ b/other/Servicios.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/Servicios.css">
-    <title>Document</title>
+    <title>Servicios</title>
 </head>
 <body>
     
