--- a/other/Servicios.html
+++ b/other/Servicios.html
@@ -50,7 +50,7 @@
           </div>
           <div class="column">
             <div class="content">
-            <img src="../media/soporte.png" alt="Soporte" style="width:100%">
+            <img src="" alt="Soporte" style="width:100%">
               <h3>Soporte Tecnico</h3>
               <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
             </div>
