--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/Inicio.css">
-
+    <link rel="icon" href="./media/iconos/mini.png" sizes="144x144" >
     <title>Cesar Rivas</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
                       <a href="./other/Contacto.html">Contacto</a>
                     </div>
                   </div>
-                  <span style="font-size:30px;cursor:pointer;color:white;margin-left: 20px;" onclick="openNav()">&#9776; </span>
+                  <span class="NAvi" style="font-size:30px;cursor:pointer;color:white;margin-left: 20px;" onclick="openNav()">&#9776; </span>
                    <!-- El menu deslizable termina aqui   -->
     </div>
 
