--- a/other/Servicios.html
+++ b/other/Servicios.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/Servicios.css">
+    <link rel="icon" href="../media/iconos/mini.png" sizes="144x144" >
     <title>Servicios</title>
 </head>
 <body>
@@ -30,7 +31,7 @@
         <hr>
         
         <h2>PORTFOLIO</h2>
-        <p>Aqui puedes encontrar algo de lo poco que puedo hacer y he aprendido hasta el dia de hoy.</p>
+        <p>Aqui puedes encontrar algo de lo poco que puedo hacer y he aprendido hasta el dia de hoy, al igual y me contratas.</p>
         
         <!-- Portfolio aqui -->
         <div class="row">
@@ -38,28 +39,28 @@
             <div class="content">
               <img src="../media/paginas.png" alt="page Web" style="width:100%">
               <h3>Creacion de paginas Web </h3>
-              <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+              <p>Crea una web para ti o para tu negocio...</p>
             </div>
           </div>
           <div class="column">
             <div class="content">
             <img src="../media/apps.png" alt="Carnitas" style="width:100%">
               <h3>Desarrollo de Apps</h3>
-              <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+              <p>Soy un especialista encargado de diseñar la interfaz de usuario de cada aplicación que se me presente.</p>
             </div>
           </div>
           <div class="column">
             <div class="content">
             <img src="../media/soporte.png" alt="Soporte" style="width:100%">
               <h3>Soporte Tecnico</h3>
-              <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+              <p>Asesorar a los usuarios y sus necesidades en la compra de software, hardware y dispositivos informáticos. Reparar y poner en funcionamiento el equipamiento informático.</p>
             </div>
           </div>
           <div class="column">
             <div class="content">
             <img src="../media/diseño.png" alt="otra" style="width:100%">
               <h3>Diseño Creativo</h3>
-              <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+              <p>Tener una gran idea y convertirla en un buen diseño gráfico es posible si trabajamos para desarrollarlo.</p>
             </div>
           </div>
         <!-- END GRID -->
