--- a/other/Contacto.html
+++ b/other/Contacto.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/Contacto.css">
     <link rel="stylesheet" href="../css/main.css">   
+    <link rel="icon" href="../media/iconos/mini.png" sizes="144x144" >
     <title>Contacto</title>
 </head>
 <body>
