--- a/other/Servicios.html
+++ b/other/Servicios.html
@@ -30,7 +30,7 @@
         <h1>Cesar Rivas</h1>
         <hr>
         
-        <h2>PORTFOLIO</h2>
+        <h2>PORTAFOLIO</h2>
         <p>Aqui puedes encontrar algo de lo poco que puedo hacer y he aprendido hasta el dia de hoy, al igual y me contratas.</p>
         
         <!-- Portfolio aqui -->
