--- a/other/Servicios.html
+++ b/other/Servicios.html
@@ -65,13 +65,65 @@
           </div>
         <!-- END GRID -->
         </div>
+        <div class="row">
+          <div class="column">
+            <div class="content">
+              <img src="../media/AdministradorServidores-1.png" alt="page Web" style="width:100%">
+              <h3>Creacion de paginas Web </h3>
+              <p>Crea una web para ti o para tu negocio...</p>
+            </div>
+          </div>
+          <div class="column">
+            <div class="content">
+            <img src="../media/AnalisisdDatos-1.png" alt="Carnitas" style="width:100%">
+              <h3>Desarrollo de Apps</h3>
+              <p>Soy un especialista encargado de diseñar la interfaz de usuario de cada aplicación que se me presente.</p>
+            </div>
+          </div>
+          <div class="column">
+            <div class="content">
+            <img src="../media/aplicaciones-1.png" alt="Soporte" style="width:100%">
+              <h3>Soporte Tecnico</h3>
+              <p>Asesorar a los usuarios y sus necesidades en la compra de software, hardware y dispositivos informáticos. Reparar y poner en funcionamiento el equipamiento informático.</p>
+            </div>
+          </div>
+          <div class="column">
+            <div class="content">
+            <img src="../media/Web-1.png" alt="otra" style="width:100%">
+              <h3>Diseño Creativo</h3>
+              <p>Tener una gran idea y convertirla en un buen diseño gráfico es posible si trabajamos para desarrollarlo.</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="column">
+              <div class="content">
+                <img src="../media/certificado-como-crear-una-pagina-web.png" alt="page Web" style="width:100%">
+                <h3>Creacion de paginas Web </h3>
+                <p>Crea una web para ti o para tu negocio...</p>
+              </div>
+            </div>
+            <div class="column">
+              <div class="content">
+              <img src="../media/certificado-fundamentos-java.png" alt="Carnitas" style="width:100%">
+                <h3>Desarrollo de Apps</h3>
+                <p>Soy un especialista encargado de diseñar la interfaz de usuario de cada aplicación que se me presente.</p>
+              </div>
+            </div>
+            <div class="column">
+              <div class="content">
+              <img src="../media/certificado-git.png" alt="Soporte" style="width:100%">
+                <h3>Soporte Tecnico</h3>
+                <p>Asesorar a los usuarios y sus necesidades en la compra de software, hardware y dispositivos informáticos. Reparar y poner en funcionamiento el equipamiento informático.</p>
+              </div>
+            </div>
+            <div class="column">
+              <div class="content">
+              <img src="../media/certificado-html-css.png" alt="otra" style="width:100%">
+                <h3>Diseño Creativo</h3>
+                <p>Tener una gran idea y convertirla en un buen diseño gráfico es posible si trabajamos para desarrollarlo.</p>
+              </div>
+            </div>
         
-        <div class="content">
-          <img src="../media/mypage.png" alt="" style="width:100%">
-          <h3>Some Other Work</h3>
-          <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
-          <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
-        </div>
         
         <!--Portafolio Termina aqui -->
         </div>
