--- a/other/Contacto.html
+++ b/other/Contacto.html
@@ -24,6 +24,37 @@
                        <!-- El menu deslizable termina aqui   -->
 </div>
 
+<section id="primary">
+  <h3>Información general</h3>
+  <p>Actualmente no estoy buscando un trabajo como desarrollador, pero estoy disponible como instructor o conferencista. Si tienes alguna pregunta no dudes en contactarme</p>
+</section>
+<section id="secondary">
+  <h3>Detalles de contacto</h3>
+  <ul class="contact-info">
+    <li class="phone"><a href="tel:555-6425">555-6425</a></li>
+    <li class="mail"><a href="mailto:nick@example.com">enrique7mc@gmail.com</a></li>
+    <li class="twitter"><a href="http://twitter.com/intent/tweet?screen_name=enrique7mc_">@enrique7mc_</a></li>
+  </ul>
+</section>
+<section>
+  <form id="contactForm" method="post" action="../php/contact-form.php">
+    <div>
+      <input class="form-control" id="name" name="name" placeholder="Nombre" type="text" required />
+    </div>          
+    <div>
+      <input class="form-control" id="email" name="email" placeholder="Email" type="email" required />
+    </div>        
+    <div>
+      <input class="form-control" id="subject" type="text" name="subject" placeholder="Asunto" required>
+    </div>
+    <div>
+      <textarea class="form-control" id="message" name="message" placeholder="Mensaje" rows="5" required></textarea>
+    </div>
+    <div>
+      <input type="submit" class="form-send" value="Enviar">
+    </div>
+  </form>
+</section>
 
 
 <div id="footer"><li class="redes">
