--- a/other/Contacto.html
+++ b/other/Contacto.html
@@ -24,16 +24,16 @@
                        <!-- El menu deslizable termina aqui   -->
 </div>
 
-<section id="primary">
+<!-- <section id="primary"> -->
   <h3>Información general</h3>
   <p>Actualmente no estoy buscando un trabajo como desarrollador, pero estoy disponible como instructor o conferencista. Si tienes alguna pregunta no dudes en contactarme</p>
 </section>
 <section id="secondary">
   <h3>Detalles de contacto</h3>
   <ul class="contact-info">
-    <li class="phone"><a href="tel:555-6425">555-6425</a></li>
-    <li class="mail"><a href="mailto:nick@example.com">enrique7mc@gmail.com</a></li>
-    <li class="twitter"><a href="http://twitter.com/intent/tweet?screen_name=enrique7mc_">@enrique7mc_</a></li>
+    <li class="phone"><a href="tel:5545790316">5545790316</a></li>
+    <li class="mail"><a href="mailto:nick@example.com">Csrivas24@gmail.com</a></li>
+    <li class="twitter"><a href="http://twitter.com/francrivas">@FrancRivas</a></li>
   </ul>
 </section>
 <section>
@@ -58,10 +58,10 @@
 
 
 <div id="footer"><li class="redes">
-        <a  href="https://www.facebook.com/Rivas.CesarGuzman"><img src="../media/iconos/facebook.png" alt="" srcset=""></a>
-        <a  href="https://www.instagram.com/francrivas/"><img src="../media/iconos/instagram.png" alt="" srcset=""></a>
+        <!-- <a  href="https://www.facebook.com/Rivas.CesarGuzman"><img src="../media/iconos/facebook.png" alt="" srcset=""></a> -->
+        <!-- <a  href="https://www.instagram.com/francrivas/"><img src="../media/iconos/instagram.png" alt="" srcset=""></a> -->
         <a  href="https://www.linkedin.com/in/francriv/"><img src="../media/iconos/linkedin.png" alt="" srcset=""></a>
-        <a  href="../media/iconos/snapcode.png" download="Snapcode.png"><img src="../media/iconos/snapchat.png" alt="snapchat"></a>
+        <!-- <a  href="../media/iconos/snapcode.png" download="Snapcode.png"><img src="../media/iconos/snapchat.png" alt="snapchat"></a> -->
         <a  href="https://twitter.com/FrancRivas"><img src="../media/iconos/twitter.png" alt="" srcset=""></a>
         <a  href="https://api.whatsapp.com/send?phone=525545790316&text=Quiero contratarte!"><img src="../media/iconos/whatsapp.png" alt="" srcset=""></a>
         <a  href="https://github.com/Francriv"><img src="../media/iconos/github-sign.png" alt="" srcset=""></a>
