--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
 
 
     <div id="footer"><li class="redes">
-      <a  href="https://www.facebook.com/Rivas.CesarGuzman"><img src="./media/iconos/facebook.png" alt="" srcset=""></a>
-      <a  href="https://www.instagram.com/francrivas/"><img src="./media/iconos/instagram.png" alt="" srcset=""></a>
+      <!-- <a  href="https://www.facebook.com/Rivas.CesarGuzman"><img src="./media/iconos/facebook.png" alt="" srcset=""></a> -->
+      <!-- <a  href="https://www.instagram.com/francrivas/"><img src="./media/iconos/instagram.png" alt="" srcset=""></a> -->
       <a  href="https://www.linkedin.com/in/francriv/"><img src="./media/iconos/linkedin.png" alt="" srcset=""></a>
-      <a  href="./media/iconos/snapcode.png" download="Snapcode.png"><img src="./media/iconos/snapchat.png" alt="snapchat"></a>
+      <!-- <a  href="./media/iconos/snapcode.png" download="Snapcode.png"><img src="./media/iconos/snapchat.png" alt="snapchat"></a> -->
       <a  href="https://twitter.com/FrancRivas"><img src="./media/iconos/twitter.png" alt="" srcset=""></a>
       <a  href="https://api.whatsapp.com/send?phone=525545790316&text=Quiero contratarte!"><img src="./media/iconos/whatsapp.png" alt="" srcset=""></a>
       <a  href="https://github.com/Francriv"><img src="./media/iconos/github-sign.png" alt="" srcset=""></a>
