--- a/other/Contacto.html
+++ b/other/Contacto.html
@@ -24,7 +24,7 @@
                        <!-- El menu deslizable termina aqui   -->
 </div>
 
-<!-- <section id="primary"> -->
+<!-- <section id="primary">
   <h3>Información general</h3>
   <p>Actualmente no estoy buscando un trabajo como desarrollador, pero estoy disponible como instructor o conferencista. Si tienes alguna pregunta no dudes en contactarme</p>
 </section>
@@ -54,7 +54,7 @@
       <input type="submit" class="form-send" value="Enviar">
     </div>
   </form>
-</section>
+</section> -->
 
 
 <div id="footer"><li class="redes">
